# space_invaders_cpp

./: CMakeLists.txt  ErrorHandling.cpp  ErrorHandling.h  README.md  main.cpp  rendering.cpp
src/: ErrorHandling.h  main.cpp  rendering.h
src/Dependencies/cpp/: ErrorHandling.cpp  Game.cpp  Rendering.cpp  rendering.cpp
src/Dependencies/include/: Game.h  Rendering.h
